tests/compile-error/compile_error.c
#include "compile_error.h"

int invalid(int x, int y)
{
   return x + y;
}
